[package]
name = "rust-gbe"
version = "1.2.1"
edition = "2024"

[dependencies]
mimalloc = "0.1.48"
glium = "0.36"
winit = "0.30"
cpal = "0.16"
rfd = "0.15"
egui = "0.31"
egui_glium = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }
serde_arrays = "0.2.0"
typetag = "0.2.20"
blip_buf = "0.1.5"

[profile.dev]
debug = "line-tables-only"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
strip = "symbols"
