[package]
name = "rust-gbe"
version = "2.0.0"
edition = "2024"

[dependencies]
mimalloc = "0.1.50"
glium = "0.36"
winit = "0.30.13"
cpal = "0.17.3"
rfd = "0.17.2"
egui = "0.33"
egui_glium = "0.33.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blip_buf = "0.1.6"
rkyv = { version = "0.8.16", features = ["little_endian", "unaligned", "pointer_width_32"] }
time = { version = "0.3.47", features = ["formatting", "local-offset"] }

[profile.dev]
debug = "line-tables-only"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
debug = false
strip = "symbols"
